src/objects/Tickets__c.object
<CustomObject>
    <fields>
        <fullName>Concert__c</fullName>
        <label>Concert</label>
        <referenceTo>Concert__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_purchase__c</fullName>
        <label>Date of purchase</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_tickets_purchased__c</fullName>
        <label>No of tickets purchased</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Concert__r.Price__c *  No_of_tickets_purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WAIT_del__c</fullName>
        <formula>IF( ((No_of_tickets_purchased__c &gt;  Concert__r.Remaining_Tickets__c) 
&amp;&amp;  (Date_of_purchase__c = today())), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WAIT</label>
        <type>Checkbox</type>
    </fields>
    <label>Tickets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tickets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>